--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-redux-form": "^1.16.14",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
